stacker/templates/arcgis-server-instance-sg-and-rules.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creates an EC2 Security Group and ingress rules for an ArcGIS
  server to allow traffic from the ArcGIS web servers web adapter'


Parameters:

  GroupDescription:
    Description: 'A description of the security group'
    Type: String

  GroupName:
    Description: 'A name for the security group'
    Type: String

  PrivateCidr10: {Type: String}
  PrivateCidr172: {Type: String}
  PrivateCidr192: {Type: String}

  SourceSgId:
    Description: 'Specifies the ID of the EC2 Security Group to allow access'
    Type: String

  VpcId:
    Description: 'VPC ID to create the Security Group in'
    Type: AWS::EC2::VPC::Id


Resources:

  Ec2SecurityGroup:
    Properties:
      GroupName: !Ref GroupName
      GroupDescription: !Ref GroupDescription
      SecurityGroupIngress:
        - {FromPort: 445, ToPort: 445, IpProtocol: tcp, CidrIp: !Ref PrivateCidr10, Description: SMB from !Ref PrivateCidr10}
        - {FromPort: 445, ToPort: 445, IpProtocol: tcp, CidrIp: !Ref PrivateCidr172, Description: SMB from !Ref PrivateCidr172}
        - {FromPort: 445, ToPort: 445, IpProtocol: tcp, CidrIp: !Ref PrivateCidr192, Description: SMB from !Ref PrivateCidr192}
        - {FromPort: 6080, ToPort: 6080, IpProtocol: tcp, SourceSecurityGroupId: !Ref SourceSgId, Description: ArcGIS Web Adapter traffic}
        - {FromPort: 6443, ToPort: 6443, IpProtocol: tcp, SourceSecurityGroupId: !Ref SourceSgId, Description: ArcGIS Web Adapter traffic}
      Tags:
        - {Key: Name, Value: !Ref GroupName}
      VpcId: !Ref VpcId
    Type: AWS::EC2::SecurityGroup

  Ec2SecurityGroupIngressServer:
    Properties:
      Description: ArcGIS Server traffic
      FromPort: 4000
      ToPort: 4002
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt Ec2SecurityGroup.GroupId
    Type: AWS::EC2::SecurityGroupIngress

  Ec2SecurityGroupIngress6080:
    Properties:
      Description: ArcGIS Internal traffic
      FromPort: 6080
      ToPort: 6080
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt Ec2SecurityGroup.GroupId
    Type: AWS::EC2::SecurityGroupIngress

  Ec2SecurityGroupIngress6443:
    Properties:
      Description: ArcGIS Internal traffic
      FromPort: 6443
      ToPort: 6443
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt Ec2SecurityGroup.GroupId
    Type: AWS::EC2::SecurityGroupIngress

Outputs:

  SgId:
    Description: ID of the Security Group created
    Export: {'Name': !Sub '${AWS::StackName}-SgId'}
    Value: !GetAtt Ec2SecurityGroup.GroupId
